--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -38,6 +38,7 @@
     <div class="container mt-5">
         <h1>Welcome, {{ current_user.name }}!</h1>
         <p>This is your dashboard. Here you can view and edit your profile details.</p>
+        THANKYOU FOR VISITING
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
